contrib/cnd.highlight/test/unit/data/org/netbeans/modules/cnd/highlight/error/UnresolvedIdentifierTest/bug211143_1.cpp
// Structure with inner structure
struct BuilderData211143
{
    struct Theme211143
    {
        Theme( ) {}

        int m_tooltipfont;
        int m_magnet;
        int m_alpha;
        int m_moveAlpha;
    };
    /// List
    Theme211143 m_listTheme[];
};

int main211143_1(int argc, char** argv) {

    return 0;
}

